[project]
name = "pyrover"
version = "0.1.0"
description = "A full-featured python client for the Renogy Rover MPPT"
authors = [{ name = "Seb Martin" }]
license = { text = "n" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pyserial (>=3.5,<4.0)", "minimalmodbus (==1.0.2)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.5"
