[tool.poetry]
name = "pyrover"
version = "0.1.0"
description = "A full-featured python client for the Renogy Rover MPPT"
authors = ["Seb Martin"]
license = "MIT"
readme = "README.md"
python = ">=3.8"

[tool.poetry.dependencies]
python = ">=3.8"
pyserial = ">=3.5,<4.0"
minimalmodbus = "==1.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.5"
pyright = "^1.1.399"

[build-system]
requires = ["poetry-core>=1.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
