[project]
name = "pyrover"
version = "0.9.0"
description = "A full-featured python client for the Renogy Rover MPPT"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Seb Martin" }]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = ["pyserial>=3.5,<4.0", "minimalmodbus==1.0.2"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.11.5", "pyright>=1.1.399", "pytest-cov"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
